# reef

./: CMakeLists.txt  CONTRIBUTORS.md  INSTALL.md  README.md  env.sh
resource/: Makefile  README.md
resource/alexnet/: alexnet.be.cu  alexnet.cu  alexnet.json  alexnet.profile.json  alexnet.trans.cu
resource/bert/: bert.be.cu  bert.cu  bert.json  bert.profile.json  bert.trans.cu
resource/densenet/: densenet.be.cu  densenet.cu  densenet.json  densenet.profile.json  densenet.trans.cu
resource/inception/: inception.be.cu  inception.cu  inception.json  inception.profile.json  inception.trans.cu
resource/mobilenet/: mobilenet.be.cu  mobilenet.cu  mobilenet.json  mobilenet.profile.json  mobilenet.trans.cu
resource/mocked_kernel/: mocked_kernel.be.cu  mocked_kernel.cu  mocked_kernel.json  mocked_kernel.profile.json  mocked_kernel.trans.cu
resource/resnet/: resnet.be.cu  resnet.cu  resnet.json  resnet.profile.json  resnet.trans.cu
resource/resnet152/: resnet152.be.cu  resnet152.cu  resnet152.json  resnet152.profile.json  resnet152.trans.cu
resource/resnet18/: resnet18.be.cu  resnet18.cu  resnet18.json  resnet18.profile.json  resnet18.trans.cu
resource/vgg/: vgg.be.cu  vgg.cu  vgg.json  vgg.profile.json  vgg.trans.cu
script/: best_effort_kernel.py  estimate_max_throughput.py  estimate_resource_usage.py  generate_asm_loop.py  generate_final_schedule.py  generate_register_hint.py  generate_shared_memory_usage.py  get_kernel_descriptor.py  get_kernel_occupancy.py  replace_raw_occupancy.py  replace_register_usage.py  transform_kernel.py  tvm_generate_model.py
src/example/: rpc_client.cpp  rpc_client_cont.cpp  rpc_server.cpp
src/reef/client/: client.cpp  client.h
src/reef/executor/: executor_base.cpp  executor_base.h  hybrid_executor.cpp  hybrid_executor.h  model.cpp  model.h  trans_executor.cpp  trans_executor.h
src/reef/executor/hip/: hip_impl.cpp  hip_impl.h
src/reef/protos/: reef.proto
src/reef/server/: scheduler.cpp  scheduler.h  server.cpp  server.h
src/reef/test/: test.cpp
src/reef/util/: common.h  json.cpp  json.h  shared_memory.cpp  shared_memory.h  threadsafe_queue.h
